--- a/style.css
+++ b/style.css
@@ -2,10 +2,52 @@
     padding: 0;
     margin: 0;
 }
-
+/* banner */
 .banner-image{
     width: 1320px;
 height:500px;
 margin-left: 20px;
 margin-top: 15px;
+}
+/* categories section */
+.categories{
+background: #FFF;
+}
+.off{
+    color: #F00;
+margin-top: 120px;
+text-align: center;
+font-family: Inter;
+font-size: 88px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.HOLIDAY{
+    color: #F00;
+
+text-align: center;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+margin-top: 48px;
+}
+.all{
+    color: #070211;
+
+text-align: center;
+font-family: Inter;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.new-year-photo{
+    width: 400px;
+    margin-left: 35%;
+    margin-top: 10px;
+height: 300px;
+flex-shrink: 0;
 }
